manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otjestnextjs-6563a38c-618f-48c0-ab15-46221fdfac9f-deployment
  labels:
    app: otjestnextjs-6563a38c-618f-48c0-ab15-46221fdfac9f
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otjestnextjs-6563a38c-618f-48c0-ab15-46221fdfac9f
  template:
    metadata:
      labels:
        app: otjestnextjs-6563a38c-618f-48c0-ab15-46221fdfac9f
    spec:
      containers:
        - name: otjestnextjs-6563a38c-618f-48c0-ab15-46221fdfac9f-container
          image: pipejet/lyna-otjestnextjs:1
          ports:
            - containerPort: 3000
