manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otjestnextjs-6563a38c-618f-48c0-ab15-46221fdfac9f-service
spec:
  type: NodePort
  selector:
    app: otjestnextjs-6563a38c-618f-48c0-ab15-46221fdfac9f
  ports:
    - protocol: TCP
      port: 8131
      targetPort: 3000
